// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Salaire /> renders 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: auto;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c1 {
  margin-top: 1.25rem;
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
        />
        <line
          x1="12"
          x2="12"
          y1="9"
          y2="13"
        />
        <line
          x1="12"
          x2="12"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
    <div
      class="c3"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de votre convention collective. Si vous en avez perçues, merci de les intégrer à votre rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c4"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration de votre salaire ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<Salaire /> renders a question asking about income's regularity 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: auto;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c1 {
  margin-top: 1.25rem;
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
        />
        <line
          x1="12"
          x2="12"
          y1="9"
          y2="13"
        />
        <line
          x1="12"
          x2="12"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
    <div
      class="c3"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de votre convention collective. Si vous en avez perçues, merci de les intégrer à votre rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c4"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration de votre salaire ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        checked=""
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c4"
  >
    Avez-vous eu le même salaire lors des 12 derniers mois ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<Salaire /> renders a table of fields of type number 1`] = `
.c7 {
  position: relative;
  overflow: hidden;
}

.c7:before,
.c7:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c7:before {
  left: -2rem;
}

.c7:after {
  right: -2rem;
}

.c8 {
  overflow-x: auto;
}

.c9 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-collapse: collapse;
  border-spacing: 0;
}

.c9 caption {
  padding: 0.625rem 0;
  font-style: italic;
  text-align: center;
}

.c9 td,
.c9 th {
  padding: 0.625rem 1rem;
  border: 1px solid #c9d3df;
}

.c9 thead,
.c9 tfoot {
  padding: 0.625rem 1rem;
  vertical-align: bottom;
  background: #f9f9fc;
}

.c9 tfoot {
  vertical-align: top;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: auto;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c1 {
  margin-top: 1.25rem;
}

.c10 tr > td:nth-child(2) {
  width: 70%;
  text-align: left;
}

.c12 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c12::-webkit-outer-spin-button,
.c12::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11 {
  position: relative;
  display: inline-block;
  margin-right: 1.25rem;
}

.c13 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
        />
        <line
          x1="12"
          x2="12"
          y1="9"
          y2="13"
        />
        <line
          x1="12"
          x2="12"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
    <div
      class="c3"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de votre convention collective. Si vous en avez perçues, merci de les intégrer à votre rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c4"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration de votre salaire ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        checked=""
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c4"
  >
    Avez-vous eu le même salaire lors des 12 derniers mois ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        checked=""
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <div
    class="c7"
  >
    <div
      class="c8"
    >
      <table
        class="c9 c10"
      >
        <thead>
          <tr>
            <th>
              Mois
            </th>
            <th>
              Salaire mensuel ajusté (primes et temps partiel inclus)
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <label
                for="salaire0"
              >
                juillet 2019
              </label>
            </td>
            <td>
              <div
                class="c11"
              >
                <input
                  class="c12"
                  id="salaire0"
                  name="brancheNewIrregularSalaire[0].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c13"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salaire1"
              >
                juin 2019
              </label>
            </td>
            <td>
              <div
                class="c11"
              >
                <input
                  class="c12"
                  id="salaire1"
                  name="brancheNewIrregularSalaire[1].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c13"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<Salaire /> renders an input field of type number 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: auto;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c1 {
  margin-top: 1.25rem;
}

.c8 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
  margin-right: 1.25rem;
}

.c9 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
        />
        <line
          x1="12"
          x2="12"
          y1="9"
          y2="13"
        />
        <line
          x1="12"
          x2="12"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
    <div
      class="c3"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de votre convention collective. Si vous en avez perçues, merci de les intégrer à votre rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c4"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration de votre salaire ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        checked=""
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c4"
  >
    Avez-vous eu le même salaire lors des 12 derniers mois ?
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
    >
      <input
        checked=""
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c6"
    >
      <input
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p>
    Salaire mensuel ajusté (primes et temps partiel inclus)
  </p>
  <div
    class="c7"
  >
    <input
      class="c8"
      name="brancheNewRegularSalaire"
      size="10"
      type="number"
      value=""
    />
    <span
      aria-hidden="true"
      class="c9"
    >
      €
    </span>
  </div>
</div>
`;
